fix alignment of event details and vertical text

--- a/main page - final/static/events-and-projects/css/main_events.css
+++ b/main page - final/static/events-and-projects/css/main_events.css
@@ -132,6 +132,7 @@ body {
     position: absolute;
     left: 39px;
     top: 5px;
+    padding-left: 0px;
     list-style-type: none;
 }
 
@@ -196,8 +197,9 @@ body {
     z-index: 10;
     position: absolute;
     top: 5%;
-    right: 15%;
-    color: #333;
+    right: 14%;
+    color: #000;
+    font-weight: bold;
     opacity: 0.7;
     font-size: calc(1vw + 1vh);
     letter-spacing: 1px;
@@ -254,13 +256,14 @@ body {
 .event-container .detail {
     z-index: 30;
     position: absolute;
-    top: 5%;
+    top: 10%;
+    bottom: 10%;
     right: 25%;
     width: 42%;
-    height: 60%;
+    /* height: 60%; */
     color: #FFF;
     opacity: 0;
-    font-size: 75%;
+    font-size: 85%;
     letter-spacing: 1px;
     text-align: justify;
     -webkit-transition: all 0.2s ease;
@@ -344,7 +347,7 @@ body {
 /* short line */
 
 .event-container .desktop-card2 .vertical {
-    left: 15%;
+    left: 14%;
     right: auto;
     writing-mode: vertical-lr;
     transform: scale(-1, -1);
@@ -377,7 +380,8 @@ body {
         font-size: 450%;
     }
     .event-container .detail {
-        font-size: 100%;
+        font-size: 105%;
+        top: 20%;
     }
 }
 
@@ -385,7 +389,7 @@ body {
     display: none;
 }
 
-@media screen and (max-width: 600px) {
+@media screen and (max-width: 700px) {
     .mobile-events-container {
         display: flex;
     }
