--- a/main page - final/static/events-and-projects/css/main_projects.css
+++ b/main page - final/static/events-and-projects/css/main_projects.css
@@ -126,6 +126,7 @@ body {
     position: absolute;
     left: 39px;
     top: 5px;
+    padding-left: 0px;
     list-style-type: none;
 }
 
@@ -137,6 +138,7 @@ body {
     height: 2px;
     border-radius: 2px;
     margin: 6px 0;
+    padding-left: 0px;
     background-color: var(--bg-color);
 }
 
@@ -189,8 +191,9 @@ body {
     z-index: 10;
     position: absolute;
     top: 5%;
-    right: 15%;
-    color: #333;
+    right: 14%;
+    color: #000;
+    font-weight: bold;
     opacity: 0.7;
     font-size: calc(1vw + 1vh);
     letter-spacing: 1px;
@@ -247,13 +250,14 @@ body {
 .project-container .detail {
     z-index: 30;
     position: absolute;
-    top: 5%;
+    top: 10%;
+    bottom: 25%;
     right: 25%;
     width: 42%;
-    height: 60%;
+    /* height: 70%; */
     color: #FFF;
     opacity: 0;
-    font-size: 75%;
+    font-size: 80%;
     letter-spacing: 1px;
     text-align: justify;
     -webkit-transition: all 0.2s ease;
@@ -337,7 +341,7 @@ body {
 /* short line */
 
 .project-container .desktop-card2 .vertical {
-    left: 15%;
+    left: 14%;
     right: auto;
     writing-mode: vertical-lr;
     transform: scale(-1, -1);
@@ -370,6 +374,7 @@ body {
         font-size: 450%;
     }
     .project-container .detail {
+        top: 15%;
         font-size: 100%;
     }
 }
